# meta-watchdog-

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: config_manager.py  default_config.yaml
dashboard/: app.py
dashboard/templates/: index.html
examples/: advanced_usage.py  basic_usage.py  drift_detection.py
meta_watchdog/: __init__.py  cli.py  py.typed
meta_watchdog/alerts/: __init__.py  alert_manager.py
meta_watchdog/analysis/: __init__.py  root_cause.py
meta_watchdog/api/: __init__.py  client.py  server.py
meta_watchdog/benchmarks/: __init__.py  benchmark.py
meta_watchdog/core/: __init__.py  base_model.py  data_structures.py  interfaces.py
meta_watchdog/dashboard/: __init__.py  data_provider.py  terminal.py
meta_watchdog/explainability/: __init__.py  explanation_engine.py
meta_watchdog/exporters/: __init__.py  prometheus.py
meta_watchdog/meta_prediction/: __init__.py  failure_predictor.py  trend_analyzer.py
meta_watchdog/monitoring/: __init__.py  metrics.py  performance_monitor.py  reliability_scorer.py
meta_watchdog/orchestrator/: __init__.py  system.py
meta_watchdog/plugins/: __init__.py  plugin_system.py
meta_watchdog/recommendations/: __init__.py  action_engine.py
meta_watchdog/simulation/: __init__.py  counterfactual.py  scenarios.py  sensitivity.py
meta_watchdog/telemetry/: __init__.py  logging.py
meta_watchdog/testing/: __init__.py  synthetic_data.py
meta_watchdog/utils/: __init__.py  config_validator.py  persistence.py
tests/: conftest.py  test_alerts.py  test_benchmarks.py  test_core.py  test_integration.py  test_monitoring.py
